# notebook

./: pyproject.toml
src/12.1 Библиотеки json, requests и datetime/: data_1.json  Библиотека json.py
src/12.1 Библиотеки json, requests и datetime/Библиотека datatime/: datatime.py
src/12.1 Библиотеки json, requests и datetime/Библиотека json/: Библиотека json.py  Самостоятельная праетика json(Задача_2).py  Самостоятельная практика json(Задача_1).py
src/12.1 Библиотеки json, requests и datetime/Библиотекака requests/: Библиотека requests.py
src/12.1 Библиотеки json, requests и datetime/Переменные окружения  файл env/: Переменные окружения файл env.py
src/12.2 Библиотека logging/: Библиотека logging.py
src/13.1 Библиотеки csv и pandas/Библиотека pandas/: Сщздание и чтение данных  в pandas.py
src/13.1 Библиотеки csv и pandas/Библитоека CSV/: Библиотека CSV.py
src/13.1 Библиотеки csv и pandas/Дополнительные операции/: Дополнительные операции.py
src/13.1 Библиотеки csv и pandas/Индексирование, выбор и присвоение/: Индексирование, выбор и присвоение.py
src/14.1_OOP/: test_OOP.py
src/OOP_14_1/: OOP.py
src/OOP_14_1/lesson_1/: Album.py  Bottle.py  Number.py  Student.py  main.py
src/OOP_14_1/lesson_2/: bankacount.py  main.py  person.py  rectangle.py  user.py
